Default `service.port_name` to `http2`
This ensures correct protocol selection in Istio and allows Phlare to work out of the box
https://istio.io/latest/docs/ops/configuration/traffic-management/protocol-selection/

update docs

--- a/operations/phlare/helm/phlare/values.yaml
+++ b/operations/phlare/helm/phlare/values.yaml
@@ -57,7 +57,7 @@ phlare:
   service:
     type: ClusterIP
     port: 4100
-    port_name: http
+    port_name: http2
 
   memberlist:
     port: 7946
