--- a/operations/phlare/helm/phlare/rendered/micro-services.yaml
+++ b/operations/phlare/helm/phlare/rendered/micro-services.yaml
@@ -560,9 +560,9 @@ spec:
   type: ClusterIP
   ports:
     - port: 4100
-      targetPort: http
+      targetPort: http2
       protocol: TCP
-      name: http
+      name: http2
   selector:
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
@@ -584,9 +584,9 @@ spec:
   type: ClusterIP
   ports:
     - port: 4100
-      targetPort: http
+      targetPort: http2
       protocol: TCP
-      name: http
+      name: http2
   selector:
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
@@ -608,9 +608,9 @@ spec:
   type: ClusterIP
   ports:
     - port: 4100
-      targetPort: http
+      targetPort: http2
       protocol: TCP
-      name: http
+      name: http2
   selector:
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
@@ -632,9 +632,9 @@ spec:
   type: ClusterIP
   ports:
     - port: 4100
-      targetPort: http
+      targetPort: http2
       protocol: TCP
-      name: http
+      name: http2
   selector:
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
@@ -656,9 +656,9 @@ spec:
   type: ClusterIP
   ports:
     - port: 4100
-      targetPort: http
+      targetPort: http2
       protocol: TCP
-      name: http
+      name: http2
   selector:
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
@@ -714,7 +714,7 @@ spec:
             - "-config.file=/etc/phlare/config.yaml"
             - "-log.level=debug"
           ports:
-            - name: http
+            - name: http2
               containerPort: 4100
               protocol: TCP
             - name: memberlist
@@ -723,7 +723,7 @@ spec:
           readinessProbe:
             httpGet:
               path: /ready
-              port: http
+              port: http2
           volumeMounts:
             - name: config
               mountPath: /etc/phlare/config.yaml
@@ -792,7 +792,7 @@ spec:
             - "-config.file=/etc/phlare/config.yaml"
             - "-log.level=debug"
           ports:
-            - name: http
+            - name: http2
               containerPort: 4100
               protocol: TCP
             - name: memberlist
@@ -801,7 +801,7 @@ spec:
           readinessProbe:
             httpGet:
               path: /ready
-              port: http
+              port: http2
           volumeMounts:
             - name: config
               mountPath: /etc/phlare/config.yaml
@@ -870,7 +870,7 @@ spec:
             - "-config.file=/etc/phlare/config.yaml"
             - "-log.level=debug"
           ports:
-            - name: http
+            - name: http2
               containerPort: 4100
               protocol: TCP
             - name: memberlist
@@ -879,7 +879,7 @@ spec:
           readinessProbe:
             httpGet:
               path: /ready
-              port: http
+              port: http2
           volumeMounts:
             - name: config
               mountPath: /etc/phlare/config.yaml
@@ -1045,7 +1045,7 @@ spec:
             - "-config.file=/etc/phlare/config.yaml"
             - "-log.level=debug"
           ports:
-            - name: http
+            - name: http2
               containerPort: 4100
               protocol: TCP
             - name: memberlist
@@ -1054,7 +1054,7 @@ spec:
           readinessProbe:
             httpGet:
               path: /ready
-              port: http
+              port: http2
           volumeMounts:
             - name: config
               mountPath: /etc/phlare/config.yaml
