--- a/package.json
+++ b/package.json
@@ -278,6 +278,7 @@
   "resolutions": {
     "react": "16.14.0",
     "react-dom": "16.14.0",
-    "jquery": "3.6.0"
+    "jquery": "3.6.0",
+    "d3-graphviz": "5.0.2"
   }
 }
