--- a/package.json
+++ b/package.json
@@ -279,6 +279,7 @@
     "react": "16.14.0",
     "react-dom": "16.14.0",
     "jquery": "3.6.0",
-    "d3-graphviz": "5.0.2"
+    "d3-graphviz": "5.0.2",
+    "d3-selection": "3.0.0"
   }
 }
