--- a/packages/pyroscope-flamegraph/package.json
+++ b/packages/pyroscope-flamegraph/package.json
@@ -27,6 +27,7 @@
   "peerDependencies": {
     "react": ">=16.14.0",
     "react-dom": ">=16.14.0",
+    "graphviz-react": "^1.2.5",
     "true-myth": "^5.1.2"
   },
   "devDependencies": {
