--- a/.github/workflows/ci-profiling.yaml
+++ b/.github/workflows/ci-profiling.yaml
@@ -22,6 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     # skip if user has not access to the token
     if: needs.check.outputs.inputsChecked == 'true'
+    needs: check
     steps:
       - name: Checkout
         uses: actions/checkout@v2
