--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
   "devDependencies": {
     "@babel/core": "7.8.4",
     "@fortawesome/fontawesome-common-types": "~0.2.36",
+    "@pyroscope/nodejs": "^0.2.5",
     "@size-limit/file": "^6.0.3",
     "@size-limit/time": "^6.0.3",
     "@storybook/addon-actions": "~6.5.0",
@@ -161,7 +162,6 @@
     "webpack-plugin-hash-output": "^3.2.1"
   },
   "dependencies": {
-    "graphviz-react": "^1.2.5",
     "@babel/plugin-transform-runtime": "^7.16.4",
     "@babel/preset-env": "^7.10.4",
     "@babel/preset-react": "^7.12.10",
@@ -206,6 +206,7 @@
     "eslint-import-resolver-webpack": "^0.13.2",
     "file-loader": "^6.2.0",
     "glob": "^7.1.7",
+    "graphviz-react": "^1.2.5",
     "html-inline-css-webpack-plugin": "^1.11.1",
     "html-webpack-plugin": "^5.5.0",
     "humanize-duration": "^3.25.1",
