--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "@storybook/builder-webpack5": "~6.5.0",
     "@storybook/manager-webpack5": "~6.5.0",
     "@storybook/react": "~6.5.0",
+    "@swc/core": "^1.3.31",
+    "@swc/jest": "^0.2.24",
     "@testing-library/cypress": "^8.0.0",
     "@testing-library/dom": "^8.7.1",
     "@testing-library/jest-dom": "^5.14.1",
@@ -136,10 +138,12 @@
     "eslint-plugin-react-hooks": "4.0.0",
     "eslint-webpack-plugin": "^2.4.1",
     "husky": "^7.0.2",
-    "jest": "^27.2.4",
+    "jest": "^29.4.1",
     "jest-canvas-mock": "^2.3.1",
-    "jest-css-modules-transform": "^4.3.0",
+    "jest-css-modules-transform": "^4.4.2",
+    "jest-environment-jsdom": "^29.4.1",
     "jest-image-snapshot": "^4.5.1",
+    "jest-transformer-svg": "^2.0.0",
     "lerna-watch": "^1.0.0",
     "lint-staged": "^11.1.2",
     "monaco-editor-webpack-plugin": "^1.9.0",
