Allow to configure the row group target size

--- a/operations/phlare/helm/phlare/values-micro-services.yaml
+++ b/operations/phlare/helm/phlare/values-micro-services.yaml
@@ -58,6 +58,8 @@ phlare:
         requests:
           memory: 6Gi
           cpu: 1
+  extraArgs:
+    phlaredb.row-group-target-size: "1000000"
 
 minio:
   enabled: true
