--- a/package.json
+++ b/package.json
@@ -109,8 +109,6 @@
     "@types/webpack-livereload-plugin": "^2.3.3",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
-    "babel-loader": "^9.1.2",
-    "babel-plugin-transform-class-properties": "^6.24.1",
     "canvas": "^2.8.0",
     "canvas-to-buffer": "^1.1.1",
     "chokidar-cli": "^3.0.0",
@@ -165,6 +163,7 @@
     "webpack-merge": "^5.0.9",
     "webpack-plugin-hash-output": "^3.2.1"
   },
+  "_dependencies": "Dependencies required to BUILD the application. When building in docker we only install dependencies to speed up the process",
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
@@ -187,6 +186,8 @@
     "@types/react-redux": "^7.1.20",
     "@types/react-router-dom": "5.3.0",
     "autoprefixer": "^9.8.5",
+    "babel-loader": "^9.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "classnames": "^2.2.6",
     "clsx": "^1.1.1",
     "color": "^3.1.3",
