--- a/packages/pyroscope-models/package.json
+++ b/packages/pyroscope-models/package.json
@@ -6,7 +6,9 @@
   "license": "Apache-2.0",
   "files": [
     "dist/**/*",
-    "src/**/*"
+    "src/**/*",
+    "CHANGELOG.md",
+    "LICENSE"
   ],
   "scripts": {
     "build": "tsc -p tsconfig.json",
