--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "pyroscope-oss",
   "private": true,
   "version": "0.37.1",
+  "license": "Apache-2.0",
   "main": "webapp/javascript/components/FlameGraph/FlameGraphComponent/index.jsx",
   "repository": {
     "type": "git",
