--- a/.github/workflows/ci-profiling.yaml
+++ b/.github/workflows/ci-profiling.yaml
@@ -76,4 +76,9 @@ jobs:
       - name: Install Webapp dependencies
         run: yarn install --frozen-lockfile
       - name: Run tests and upload
-        run: pyroscope-ci exec --apiKey=${{ secrets.PYROSCOPE_CLOUD_TOKEN }} yarn test --no-cache --max-workers=1
+        run: pyroscope-ci exec --apiKey=${{ secrets.PYROSCOPE_CLOUD_TOKEN }} --export yarn test --no-cache --max-workers=1
+      - uses: pyroscope-io/flamegraph.com-github-action@main
+        with:
+          file: pyroscope-ci-output/*
+          postInPR: true
+          token: ${{ github.token }}
