--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "@storybook/builder-webpack5": "~6.5.0",
     "@storybook/manager-webpack5": "~6.5.0",
     "@storybook/react": "~6.5.0",
+    "@swc/core": "^1.3.34",
+    "@swc/jest": "^0.2.24",
     "@testing-library/cypress": "^8.0.0",
     "@testing-library/dom": "^8.7.1",
     "@testing-library/jest-dom": "^5.14.1",
@@ -153,7 +155,6 @@
     "replace-in-file-webpack-plugin": "^1.0.6",
     "sass": "^1.26.10",
     "size-limit": "^6.0.3",
-    "ts-jest": "^27.0.5",
     "typescript": "^4.5.2",
     "typescript-plugin-css-modules": "^3.4.0",
     "webpack": "~5.71.0",
