--- a/.github/workflows/ci-profiling.yaml
+++ b/.github/workflows/ci-profiling.yaml
@@ -50,6 +50,9 @@ jobs:
         run: pyroscope-ci exec --apiKey=${{ secrets.PYROSCOPE_CLOUD_TOKEN }} make test
   js-tests:
     runs-on: ubuntu-latest
+    # skip if user has not access to the token
+    if: needs.check.outputs.inputsChecked == 'true'
+    needs: check
     steps:
       - name: Checkout
         uses: actions/checkout@v2
