--- a/examples/dotnet/rideshare/Dockerfile
+++ b/examples/dotnet/rideshare/Dockerfile
@@ -1,15 +1,15 @@
-FROM mcr.microsoft.com/dotnet/sdk:6.0
+FROM --platform=linux/amd64 mcr.microsoft.com/dotnet/sdk:6.0
 
 WORKDIR /dotnet
 
-RUN wget https://github.com/pyroscope-io/pyroscope-dotnet/releases/download/v0.7.0/Pyroscope.Linux.ApiWrapper.x64.so
-RUN wget https://github.com/pyroscope-io/pyroscope-dotnet/releases/download/v0.7.0/Pyroscope.Profiler.Native.so
+RUN wget https://github.com/pyroscope-io/pyroscope-dotnet/releases/download/v0.7.2-pyroscope/Pyroscope.Linux.ApiWrapper.x64.so
+RUN wget https://github.com/pyroscope-io/pyroscope-dotnet/releases/download/v0.7.2-pyroscope/Pyroscope.Profiler.Native.so
 
 ADD example .
 
 RUN dotnet publish -o . -r $(dotnet --info | grep RID | cut -b 6- | tr -d ' ')
 
-ENV PYROSCOPE_APPLICATION_NAME=rideshare.dotnet.app
+ENV PYROSCOPE_APPLICATION_NAME=tolyan.rideshare.dotnet.app.fargate
 ENV PYROSCOPE_SERVER_ADDRESS=http://pyroscope:4040
 ENV PYROSCOPE_LOG_LEVEL=debug
 ENV CORECLR_ENABLE_PROFILING=1
@@ -23,6 +23,7 @@ ENV PROFILING_EXCEPTION_ENABLED=true
 
 
 RUN adduser --disabled-password --gecos --quiet pyroscope
+RUN mkdir /var/log/pyroscope && chown pyroscope /var/log/pyroscope
 USER pyroscope
 
 CMD ["dotnet", "/dotnet/example.dll"]
