--- a/.github/workflows/grafana-plugins.yaml
+++ b/.github/workflows/grafana-plugins.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: Lint Grafana Plugins
 
 on:
   pull_request:
@@ -6,6 +6,8 @@ on:
       - main
 
 jobs:
+  # All this is also mirrored in https://github.com/pyroscope-io/grafana-datasource-plugin
+  # We do it here also so that the feedback loop is shorter
   datasource:
     runs-on: ubuntu-latest
     steps:
@@ -13,6 +15,16 @@ jobs:
       - uses: actions/setup-node@v2
         with:
           node-version: '16.18'
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v2
+        id: yarn-cache # use this to check for `cache-hit` (`steps.yarn-cache.outputs.cache-hit != 'true'`)
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn
       - name: Install Webapp dependencies
         run: yarn install --frozen-lockfile
       - run: yarn build:datasource
