post go profiles to flamegraph.com

--- a/.github/workflows/ci-profiling.yaml
+++ b/.github/workflows/ci-profiling.yaml
@@ -47,7 +47,13 @@ jobs:
       - name: uninstall from gospy since profiler is already running
         run: rm pkg/agent/gospy/pyroscope_test.go
       - name: Run Go tests and upload
-        run: pyroscope-ci exec --logLevel=debug --apiKey=${{ secrets.PYROSCOPE_CLOUD_TOKEN }} make test
+        run: pyroscope-ci exec --export --apiKey=${{ secrets.PYROSCOPE_CLOUD_TOKEN }} make test
+      - uses: pyroscope-io/flamegraph.com-github-action@main
+        with:
+          file: pyroscope-ci-output/*
+          postInPR: true
+          token: ${{ github.token }}
+          id: go-tests
   js-tests:
     runs-on: ubuntu-latest
     # skip if user has not access to the token
