--- a/package.json
+++ b/package.json
@@ -69,7 +69,6 @@
   "devDependencies": {
     "@babel/core": "7.8.4",
     "@fortawesome/fontawesome-common-types": "~0.2.36",
-    "@pyroscope/nodejs": "^0.2.5",
     "@size-limit/file": "^6.0.3",
     "@size-limit/time": "^6.0.3",
     "@storybook/addon-actions": "~6.5.0",
@@ -283,5 +282,8 @@
     "jquery": "3.6.0",
     "d3-graphviz": "5.0.2",
     "d3-selection": "3.0.0"
+  },
+  "optionalDependencies": {
+    "@pyroscope/nodejs": "^0.2.5"
   }
 }
