Adds tenant overrides in helm (#551)
* Adds tenant overrides in helm

* regenerate rendered files

* regenerate rendered files

* fixes linter issues

--- a/operations/phlare/helm/phlare/rendered/micro-services.yaml
+++ b/operations/phlare/helm/phlare/rendered/micro-services.yaml
@@ -12,7 +12,7 @@ kind: ServiceAccount
 metadata:
   name: phlare-dev
   labels:
-    helm.sh/chart: phlare-0.5.1
+    helm.sh/chart: phlare-0.5.2
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -352,13 +352,29 @@ data:
     scheme=http
     connectToMinio $scheme
 ---
+# Source: phlare/templates/configmap-overrides.yaml
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: phlare-dev-overrides-config
+  labels:
+    helm.sh/chart: phlare-0.5.2
+    app.kubernetes.io/name: phlare
+    app.kubernetes.io/instance: phlare-dev
+    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/managed-by: Helm
+data:
+  overrides.yaml: |
+    overrides:
+      {}
+---
 # Source: phlare/templates/configmap.yaml
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: phlare-dev-config
   labels:
-    helm.sh/chart: phlare-0.5.1
+    helm.sh/chart: phlare-0.5.2
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1037,7 +1053,7 @@ kind: ClusterRole
 metadata:
   name: default-phlare-dev
   labels:
-    helm.sh/chart: phlare-0.5.1
+    helm.sh/chart: phlare-0.5.2
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1063,7 +1079,7 @@ kind: ClusterRoleBinding
 metadata:
   name: default-phlare-dev
   labels:
-    helm.sh/chart: phlare-0.5.1
+    helm.sh/chart: phlare-0.5.2
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1151,7 +1167,7 @@ kind: Service
 metadata:
   name: phlare-dev-memberlist
   labels:
-    helm.sh/chart: phlare-0.5.1
+    helm.sh/chart: phlare-0.5.2
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1177,7 +1193,7 @@ kind: Service
 metadata:
   name: phlare-dev-agent
   labels:
-    helm.sh/chart: phlare-0.5.1
+    helm.sh/chart: phlare-0.5.2
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1201,7 +1217,7 @@ kind: Service
 metadata:
   name: phlare-dev-distributor
   labels:
-    helm.sh/chart: phlare-0.5.1
+    helm.sh/chart: phlare-0.5.2
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1225,7 +1241,7 @@ kind: Service
 metadata:
   name: phlare-dev-ingester
   labels:
-    helm.sh/chart: phlare-0.5.1
+    helm.sh/chart: phlare-0.5.2
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1249,7 +1265,7 @@ kind: Service
 metadata:
   name: phlare-dev-ingester-headless
   labels:
-    helm.sh/chart: phlare-0.5.1
+    helm.sh/chart: phlare-0.5.2
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1273,7 +1289,7 @@ kind: Service
 metadata:
   name: phlare-dev-querier
   labels:
-    helm.sh/chart: phlare-0.5.1
+    helm.sh/chart: phlare-0.5.2
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1297,7 +1313,7 @@ kind: Service
 metadata:
   name: phlare-dev-query-frontend
   labels:
-    helm.sh/chart: phlare-0.5.1
+    helm.sh/chart: phlare-0.5.2
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1321,7 +1337,7 @@ kind: Service
 metadata:
   name: phlare-dev-query-scheduler
   labels:
-    helm.sh/chart: phlare-0.5.1
+    helm.sh/chart: phlare-0.5.2
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1345,7 +1361,7 @@ kind: Deployment
 metadata:
   name: phlare-dev-agent
   labels:
-    helm.sh/chart: phlare-0.5.1
+    helm.sh/chart: phlare-0.5.2
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1361,7 +1377,7 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: 2a59c876c4ab201adffd949c067bc1c9198fc405e81f5ebab90507259e0fe283
+        checksum/config: 65a7e6c11941c8c31ed1f5d154a82ad492d607df2707cb13b1fd1cbea3b1c1f5
         profiles.grafana.com/cpu.scrape: "true"
         profiles.grafana.com/goroutine.scrape: "true"
         profiles.grafana.com/memory.scrape: "true"
@@ -1388,6 +1404,7 @@ spec:
             - "-memberlist.join=phlare-dev-memberlist.default.svc.cluster.local."
             - "-client.url=http://phlare-dev-distributor.default.svc.cluster.local.:4100"
             - "-config.file=/etc/phlare/config.yaml"
+            - "-runtime-config.file=/etc/phlare/overrides/overrides.yaml"
             - "-log.level=debug"
           ports:
             - name: http2
@@ -1404,6 +1421,8 @@ spec:
             - name: config
               mountPath: /etc/phlare/config.yaml
               subPath: config.yaml
+            - name: overrides-config
+              mountPath: /etc/phlare/overrides/
             - name: data
               mountPath: /data
           resources:
@@ -1416,6 +1435,9 @@ spec:
         - name: config
           configMap:
             name: phlare-dev-config
+        - name: overrides-config
+          configMap:
+            name: phlare-dev-overrides-config
         - name: data
           emptyDir: {}
 ---
@@ -1425,7 +1447,7 @@ kind: Deployment
 metadata:
   name: phlare-dev-distributor
   labels:
-    helm.sh/chart: phlare-0.5.1
+    helm.sh/chart: phlare-0.5.2
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1441,7 +1463,7 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: 2a59c876c4ab201adffd949c067bc1c9198fc405e81f5ebab90507259e0fe283
+        checksum/config: 65a7e6c11941c8c31ed1f5d154a82ad492d607df2707cb13b1fd1cbea3b1c1f5
         profiles.grafana.com/cpu.scrape: "true"
         profiles.grafana.com/goroutine.scrape: "true"
         profiles.grafana.com/memory.scrape: "true"
@@ -1467,6 +1489,7 @@ spec:
             - "-memberlist.cluster-label=default-phlare-dev"
             - "-memberlist.join=phlare-dev-memberlist.default.svc.cluster.local."
             - "-config.file=/etc/phlare/config.yaml"
+            - "-runtime-config.file=/etc/phlare/overrides/overrides.yaml"
             - "-log.level=debug"
           ports:
             - name: http2
@@ -1483,6 +1506,8 @@ spec:
             - name: config
               mountPath: /etc/phlare/config.yaml
               subPath: config.yaml
+            - name: overrides-config
+              mountPath: /etc/phlare/overrides/
             - name: data
               mountPath: /data
           resources:
@@ -1495,6 +1520,9 @@ spec:
         - name: config
           configMap:
             name: phlare-dev-config
+        - name: overrides-config
+          configMap:
+            name: phlare-dev-overrides-config
         - name: data
           emptyDir: {}
 ---
@@ -1504,7 +1532,7 @@ kind: Deployment
 metadata:
   name: phlare-dev-querier
   labels:
-    helm.sh/chart: phlare-0.5.1
+    helm.sh/chart: phlare-0.5.2
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1520,7 +1548,7 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: 2a59c876c4ab201adffd949c067bc1c9198fc405e81f5ebab90507259e0fe283
+        checksum/config: 65a7e6c11941c8c31ed1f5d154a82ad492d607df2707cb13b1fd1cbea3b1c1f5
         profiles.grafana.com/cpu.scrape: "true"
         profiles.grafana.com/goroutine.scrape: "true"
         profiles.grafana.com/memory.scrape: "true"
@@ -1546,6 +1574,7 @@ spec:
             - "-memberlist.cluster-label=default-phlare-dev"
             - "-memberlist.join=phlare-dev-memberlist.default.svc.cluster.local."
             - "-config.file=/etc/phlare/config.yaml"
+            - "-runtime-config.file=/etc/phlare/overrides/overrides.yaml"
             - "-log.level=debug"
           ports:
             - name: http2
@@ -1562,6 +1591,8 @@ spec:
             - name: config
               mountPath: /etc/phlare/config.yaml
               subPath: config.yaml
+            - name: overrides-config
+              mountPath: /etc/phlare/overrides/
             - name: data
               mountPath: /data
           resources:
@@ -1574,6 +1605,9 @@ spec:
         - name: config
           configMap:
             name: phlare-dev-config
+        - name: overrides-config
+          configMap:
+            name: phlare-dev-overrides-config
         - name: data
           emptyDir: {}
 ---
@@ -1583,7 +1617,7 @@ kind: Deployment
 metadata:
   name: phlare-dev-query-frontend
   labels:
-    helm.sh/chart: phlare-0.5.1
+    helm.sh/chart: phlare-0.5.2
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1599,7 +1633,7 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: 2a59c876c4ab201adffd949c067bc1c9198fc405e81f5ebab90507259e0fe283
+        checksum/config: 65a7e6c11941c8c31ed1f5d154a82ad492d607df2707cb13b1fd1cbea3b1c1f5
         profiles.grafana.com/cpu.scrape: "true"
         profiles.grafana.com/goroutine.scrape: "true"
         profiles.grafana.com/memory.scrape: "true"
@@ -1625,6 +1659,7 @@ spec:
             - "-memberlist.cluster-label=default-phlare-dev"
             - "-memberlist.join=phlare-dev-memberlist.default.svc.cluster.local."
             - "-config.file=/etc/phlare/config.yaml"
+            - "-runtime-config.file=/etc/phlare/overrides/overrides.yaml"
             - "-log.level=debug"
           ports:
             - name: http2
@@ -1641,6 +1676,8 @@ spec:
             - name: config
               mountPath: /etc/phlare/config.yaml
               subPath: config.yaml
+            - name: overrides-config
+              mountPath: /etc/phlare/overrides/
             - name: data
               mountPath: /data
           resources:
@@ -1653,6 +1690,9 @@ spec:
         - name: config
           configMap:
             name: phlare-dev-config
+        - name: overrides-config
+          configMap:
+            name: phlare-dev-overrides-config
         - name: data
           emptyDir: {}
 ---
@@ -1662,7 +1702,7 @@ kind: Deployment
 metadata:
   name: phlare-dev-query-scheduler
   labels:
-    helm.sh/chart: phlare-0.5.1
+    helm.sh/chart: phlare-0.5.2
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1678,7 +1718,7 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: 2a59c876c4ab201adffd949c067bc1c9198fc405e81f5ebab90507259e0fe283
+        checksum/config: 65a7e6c11941c8c31ed1f5d154a82ad492d607df2707cb13b1fd1cbea3b1c1f5
         profiles.grafana.com/cpu.scrape: "true"
         profiles.grafana.com/goroutine.scrape: "true"
         profiles.grafana.com/memory.scrape: "true"
@@ -1704,6 +1744,7 @@ spec:
             - "-memberlist.cluster-label=default-phlare-dev"
             - "-memberlist.join=phlare-dev-memberlist.default.svc.cluster.local."
             - "-config.file=/etc/phlare/config.yaml"
+            - "-runtime-config.file=/etc/phlare/overrides/overrides.yaml"
             - "-log.level=debug"
           ports:
             - name: http2
@@ -1720,6 +1761,8 @@ spec:
             - name: config
               mountPath: /etc/phlare/config.yaml
               subPath: config.yaml
+            - name: overrides-config
+              mountPath: /etc/phlare/overrides/
             - name: data
               mountPath: /data
           resources:
@@ -1732,6 +1775,9 @@ spec:
         - name: config
           configMap:
             name: phlare-dev-config
+        - name: overrides-config
+          configMap:
+            name: phlare-dev-overrides-config
         - name: data
           emptyDir: {}
 ---
@@ -1836,7 +1882,7 @@ kind: StatefulSet
 metadata:
   name: phlare-dev-ingester
   labels:
-    helm.sh/chart: phlare-0.5.1
+    helm.sh/chart: phlare-0.5.2
     app.kubernetes.io/name: phlare
     app.kubernetes.io/instance: phlare-dev
     app.kubernetes.io/version: "0.5.1"
@@ -1854,7 +1900,7 @@ spec:
   template:
     metadata:
       annotations:
-        checksum/config: 2a59c876c4ab201adffd949c067bc1c9198fc405e81f5ebab90507259e0fe283
+        checksum/config: 65a7e6c11941c8c31ed1f5d154a82ad492d607df2707cb13b1fd1cbea3b1c1f5
         profiles.grafana.com/cpu.scrape: "true"
         profiles.grafana.com/goroutine.scrape: "true"
         profiles.grafana.com/memory.scrape: "true"
@@ -1880,6 +1926,7 @@ spec:
             - "-memberlist.cluster-label=default-phlare-dev"
             - "-memberlist.join=phlare-dev-memberlist.default.svc.cluster.local."
             - "-config.file=/etc/phlare/config.yaml"
+            - "-runtime-config.file=/etc/phlare/overrides/overrides.yaml"
             - "-log.level=debug"
           ports:
             - name: http2
@@ -1896,6 +1943,8 @@ spec:
             - name: config
               mountPath: /etc/phlare/config.yaml
               subPath: config.yaml
+            - name: overrides-config
+              mountPath: /etc/phlare/overrides/
             - name: data
               mountPath: /data
           resources:
@@ -1908,6 +1957,9 @@ spec:
         - name: config
           configMap:
             name: phlare-dev-config
+        - name: overrides-config
+          configMap:
+            name: phlare-dev-overrides-config
         - name: data
           emptyDir: {}
 ---
