[helm] Add ingress (https://github.com/grafana/phlare/issues/517)
* [helm] Add ingress

* review

* helm docs

* code review

* helm docs last fixup :fingerscrossed:

---------

Co-authored-by: Louis Fruleux <louis.fruleux@teads.tv>

--- a/operations/phlare/helm/phlare/values.yaml
+++ b/operations/phlare/helm/phlare/values.yaml
@@ -741,3 +741,8 @@ minio:
   podAnnotations:
     phlare.grafana.com/scrape: "true"
     phlare.grafana.com/port: "9000"
+
+ingress:
+  enabled: false
+  # hosts:
+  #   - localhost
