Add headless svc for all workload (#556)

--- a/operations/phlare/helm/phlare/rendered/micro-services.yaml
+++ b/operations/phlare/helm/phlare/rendered/micro-services.yaml
@@ -1199,6 +1199,31 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  name: phlare-dev-agent-headless
+  labels:
+    helm.sh/chart: phlare-0.5.2
+    app.kubernetes.io/name: phlare
+    app.kubernetes.io/instance: phlare-dev
+    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/component: "agent"
+spec:
+  type: ClusterIP
+  clusterIP: None
+  ports:
+    - port: 4100
+      targetPort: http2
+      protocol: TCP
+      name: http2
+  selector:
+    app.kubernetes.io/name: phlare
+    app.kubernetes.io/instance: phlare-dev
+    app.kubernetes.io/component: "agent"
+---
+# Source: phlare/templates/services.yaml
+apiVersion: v1
+kind: Service
+metadata:
   name: phlare-dev-distributor
   labels:
     helm.sh/chart: phlare-0.5.1
@@ -1209,6 +1234,31 @@ metadata:
     app.kubernetes.io/component: "distributor"
 spec:
   type: ClusterIP
+  ports:
+    - port: 4100
+      targetPort: http2
+      protocol: TCP
+      name: http2
+  selector:
+    app.kubernetes.io/name: phlare
+    app.kubernetes.io/instance: phlare-dev
+    app.kubernetes.io/component: "distributor"
+---
+# Source: phlare/templates/services.yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: phlare-dev-distributor-headless
+  labels:
+    helm.sh/chart: phlare-0.5.2
+    app.kubernetes.io/name: phlare
+    app.kubernetes.io/instance: phlare-dev
+    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/component: "distributor"
+spec:
+  type: ClusterIP
+  clusterIP: None
   ports:
     - port: 4100
       targetPort: http2
@@ -1257,6 +1307,7 @@ metadata:
     app.kubernetes.io/component: "ingester"
 spec:
   type: ClusterIP
+  clusterIP: None
   ports:
     - port: 4100
       targetPort: http2
@@ -1295,6 +1346,31 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  name: phlare-dev-querier-headless
+  labels:
+    helm.sh/chart: phlare-0.5.2
+    app.kubernetes.io/name: phlare
+    app.kubernetes.io/instance: phlare-dev
+    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/component: "querier"
+spec:
+  type: ClusterIP
+  clusterIP: None
+  ports:
+    - port: 4100
+      targetPort: http2
+      protocol: TCP
+      name: http2
+  selector:
+    app.kubernetes.io/name: phlare
+    app.kubernetes.io/instance: phlare-dev
+    app.kubernetes.io/component: "querier"
+---
+# Source: phlare/templates/services.yaml
+apiVersion: v1
+kind: Service
+metadata:
   name: phlare-dev-query-frontend
   labels:
     helm.sh/chart: phlare-0.5.1
@@ -1319,6 +1395,31 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
+  name: phlare-dev-query-frontend-headless
+  labels:
+    helm.sh/chart: phlare-0.5.2
+    app.kubernetes.io/name: phlare
+    app.kubernetes.io/instance: phlare-dev
+    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/component: "query-frontend"
+spec:
+  type: ClusterIP
+  clusterIP: None
+  ports:
+    - port: 4100
+      targetPort: http2
+      protocol: TCP
+      name: http2
+  selector:
+    app.kubernetes.io/name: phlare
+    app.kubernetes.io/instance: phlare-dev
+    app.kubernetes.io/component: "query-frontend"
+---
+# Source: phlare/templates/services.yaml
+apiVersion: v1
+kind: Service
+metadata:
   name: phlare-dev-query-scheduler
   labels:
     helm.sh/chart: phlare-0.5.1
@@ -1329,6 +1430,31 @@ metadata:
     app.kubernetes.io/component: "query-scheduler"
 spec:
   type: ClusterIP
+  ports:
+    - port: 4100
+      targetPort: http2
+      protocol: TCP
+      name: http2
+  selector:
+    app.kubernetes.io/name: phlare
+    app.kubernetes.io/instance: phlare-dev
+    app.kubernetes.io/component: "query-scheduler"
+---
+# Source: phlare/templates/services.yaml
+apiVersion: v1
+kind: Service
+metadata:
+  name: phlare-dev-query-scheduler-headless
+  labels:
+    helm.sh/chart: phlare-0.5.2
+    app.kubernetes.io/name: phlare
+    app.kubernetes.io/instance: phlare-dev
+    app.kubernetes.io/version: "0.5.1"
+    app.kubernetes.io/managed-by: Helm
+    app.kubernetes.io/component: "query-scheduler"
+spec:
+  type: ClusterIP
+  clusterIP: None
   ports:
     - port: 4100
       targetPort: http2
