--- a/operations/phlare/helm/phlare/rendered/single-binary.yaml
+++ b/operations/phlare/helm/phlare/rendered/single-binary.yaml
@@ -792,6 +792,7 @@ metadata:
     app.kubernetes.io/component: "all"
 spec:
   type: ClusterIP
+  clusterIP: None
   ports:
     - port: 4100
       targetPort: http2
