--- a/.github/workflows/ci-profiling.yaml
+++ b/.github/workflows/ci-profiling.yaml
@@ -40,7 +40,7 @@ jobs:
         uses: jaxxstorm/action-install-gh-release@v1.5.0
         with:
           repo: pyroscope-io/ci
-          tag: v1.2.1
+          tag: latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: install
@@ -48,7 +48,7 @@ jobs:
       - name: uninstall from gospy since profiler is already running
         run: rm pkg/agent/gospy/pyroscope_test.go
       - name: Run Go tests and upload
-        run: pyroscope-ci exec --export --apiKey=${{ secrets.PYROSCOPE_CLOUD_TOKEN }} make test
+        run: pyroscope-ci exec --exportLocally --apiKey=${{ secrets.PYROSCOPE_CLOUD_TOKEN }} make test
       - uses: pyroscope-io/flamegraph.com-github-action@main
         with:
           file: pyroscope-ci-output/*
@@ -81,13 +81,13 @@ jobs:
         uses: jaxxstorm/action-install-gh-release@v1.5.0
         with:
           repo: pyroscope-io/ci
-          tag: v1.2.1
+          tag: latest
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Install Webapp dependencies
         run: yarn install --frozen-lockfile
       - name: Run tests and upload
-        run: pyroscope-ci exec --apiKey=${{ secrets.PYROSCOPE_CLOUD_TOKEN }} --export yarn test --no-cache --max-workers=1
+        run: pyroscope-ci exec --apiKey=${{ secrets.PYROSCOPE_CLOUD_TOKEN }} --exportLocally yarn test --no-cache --max-workers=1
       - uses: pyroscope-io/flamegraph.com-github-action@main
         with:
           file: pyroscope-ci-output/*
